# Circle-Evolution

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  Species.py  main.py  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: ask-a-question.md  bug_report.md
Circle Evolution/: Species.py
Circle Evolution/Checkpoints/: MonaLisa256genes.txt
circle_evolution/: __init__.py  __main__.py  evolution.py  fitness.py  helpers.py  main.py  reporter.py  runner.py  species.py
circle_evolution/render/: __init__.py  base.vert  circles.frag
docs/: evolution.html  fitness.html  helpers.html  index.html  main.html  species.html
